--- a/departments.html
+++ b/departments.html
@@ -346,11 +346,6 @@
             text-align: center;
         }
 
-        .department-icon {
-            font-size: 48px;
-            margin-bottom: 15px;
-        }
-
         .department-name {
             font-size: 24px;
             margin-bottom: 5px;
@@ -362,7 +357,7 @@
         }
 
         .department-image {
-            height: 200px;
+            height: 300px;
             overflow: hidden;
         }
 
@@ -704,6 +699,7 @@
     <nav class="main-nav">
         <div class="container">
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown active">
                     <a href="#">About US</a>
                     <div class="dropdown-menu">
@@ -756,14 +752,11 @@
                 <!-- Finance Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-chart-line"></i>
-                        </div>
                         <h3 class="department-name">Finance Department</h3>
                         <p class="department-head">Mr. James K. Mugisha - Director</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Finance Department">
+                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Finance Department Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -784,14 +777,11 @@
                 <!-- Administration Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-users-cog"></i>
-                        </div>
                         <h3 class="department-name">Administration</h3>
                         <p class="department-head">Ms. Grace N. Mbabazi - Head</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Administration Department">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Administration Department Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -812,14 +802,11 @@
                 <!-- Works Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-hard-hat"></i>
-                        </div>
                         <h3 class="department-name">Works Department</h3>
                         <p class="department-head">Eng. Robert S. Kato - Director</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1541888946425-d81bb19240f5?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Works Department">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Works Department Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -840,14 +827,11 @@
                 <!-- Production Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-industry"></i>
-                        </div>
                         <h3 class="department-name">Production Department</h3>
                         <p class="department-head">Mr. David L. Ochieng - Manager</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Production Department">
+                        <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Production Department Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -868,14 +852,11 @@
                 <!-- Audit Department -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-search-dollar"></i>
-                        </div>
                         <h3 class="department-name">Audit Department</h3>
                         <p class="department-head">Ms. Sarah K. Namugga - Chief Auditor</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Audit Department">
+                        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Audit Department Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -896,14 +877,11 @@
                 <!-- Community Based Services -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-hands-helping"></i>
-                        </div>
                         <h3 class="department-name">Community Based Services</h3>
                         <p class="department-head">Ms. Prossy N. Kizza - Director</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1532629345422-7515f3d16bb6?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Community Services">
+                        <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Community Services Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
@@ -924,14 +902,11 @@
                 <!-- Commerce and Trade -->
                 <div class="department-card">
                     <div class="department-header">
-                        <div class="department-icon">
-                            <i class="fas fa-store"></i>
-                        </div>
                         <h3 class="department-name">Commerce & Trade</h3>
                         <p class="department-head">Mr. Michael T. Ssekandi - Director</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1563013546-5365c76a4ff3?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Commerce and Trade">
+                        <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Commerce and Trade Head">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
