--- a/departments.html
+++ b/departments.html
@@ -753,10 +753,10 @@
                 <div class="department-card">
                     <div class="department-header">
                         <h3 class="department-name">Finance Department</h3>
-                        <p class="department-head">Mr. James K. Mugisha - Director</p>
+                        <p class="department-head">Mr. Joshua Senyonga</p>
                     </div>
                     <div class="department-image">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500&q=80" alt="Finance Department Head">
+                        <img src="#">
                     </div>
                     <div class="department-info">
                         <p class="department-description">
