--- a/dps.html
+++ b/dps.html
@@ -182,9 +182,6 @@
 
         .main-nav {
             background: var(--primary);
-            position: sticky;
-            top: 108px; /* Height of header-main */
-            z-index: 999;
         }
 
         .main-nav .container {
@@ -589,10 +586,6 @@
                 display: block;
             }
             
-            .main-nav {
-                position: static;
-            }
-            
             .main-nav.active {
                 display: block;
             }
@@ -798,7 +791,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Mr. James K. Mugisha</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 123 456</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> finance@kayungatc.go.ug</p>
@@ -873,7 +866,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Ms. Grace N. Mbabazi</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 234 567</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> admin@kayungatc.go.ug</p>
@@ -948,7 +941,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Eng. Robert S. Kato</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 345 678</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> works@kayungatc.go.ug</p>
@@ -1023,7 +1016,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Mr. David L. Ochieng</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 456 789</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> production@kayungatc.go.ug</p>
@@ -1098,7 +1091,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Ms. Sarah K. Namugga</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 567 890</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> audit@kayungatc.go.ug</p>
@@ -1173,7 +1166,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Ms. Prossy N. Kizza</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 678 901</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> community@kayungatc.go.ug</p>
@@ -1248,7 +1241,7 @@
                             </div>
                             <div class="modal-section">
                                 <h3>Contact Information</h3>
-                                <div class="contact-info">
+                                <div>
                                     <p><i class="fas fa-user"></i> <strong>Department Head:</strong> Mr. Michael T. Ssekandi</p>
                                     <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +256 772 789 012</p>
                                     <p><i class="fas fa-envelope"></i> <strong>Email:</strong> commerce@kayungatc.go.ug</p>
