--- a/departments.html
+++ b/departments.html
@@ -928,6 +928,7 @@
     </section>
 
     <!-- Department Details Modals -->
+    <!-- Finance Department Modal -->
     <div id="finance-modal" class="department-modal">
         <div class="modal-content">
             <div class="modal-header">
@@ -968,6 +969,294 @@
                         <div class="service-item">
                             <i class="fas fa-hand-holding-usd"></i>
                             <p>Grant Management</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Administration Department Modal -->
+    <div id="administration-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Administration Department</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Administration Department serves as the backbone of Kayunga Town Council, ensuring smooth operations across all departments. We manage human resources, information technology systems, and coordinate with law enforcement agencies to maintain order and efficiency.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Human resources management and development</li>
+                        <li><i class="fas fa-check"></i> Information technology systems management</li>
+                        <li><i class="fas fa-check"></i> Records and document management</li>
+                        <li><i class="fas fa-check"></i> Law enforcement coordination</li>
+                        <li><i class="fas fa-check"></i> Office administration and management</li>
+                        <li><i class="fas fa-check"></i> Staff welfare and development</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-users"></i>
+                            <p>Staff Recruitment</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-laptop"></i>
+                            <p>IT Support</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-file-alt"></i>
+                            <p>Document Processing</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <p>Security Coordination</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Works Department Modal -->
+    <div id="works-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Works Department</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Works Department is responsible for the planning, construction, and maintenance of all public infrastructure in Kayunga Town Council. Our team of engineers and technicians work tirelessly to ensure that roads, buildings, and public facilities meet the highest standards of quality and safety.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Road construction and maintenance</li>
+                        <li><i class="fas fa-check"></i> Building construction and renovation</li>
+                        <li><i class="fas fa-check"></i> Urban planning and development control</li>
+                        <li><i class="fas fa-check"></i> Public infrastructure maintenance</li>
+                        <li><i class="fas fa-check"></i> Drainage and sanitation works</li>
+                        <li><i class="fas fa-check"></i> Project management and supervision</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-road"></i>
+                            <p>Road Maintenance</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-hard-hat"></i>
+                            <p>Construction Oversight</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-drafting-compass"></i>
+                            <p>Urban Planning</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-tools"></i>
+                            <p>Infrastructure Repair</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Production Department Modal -->
+    <div id="production-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Production Department</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Production Department drives agricultural and economic development initiatives in Kayunga. We support local farmers, promote sustainable production methods, and facilitate value addition to enhance economic opportunities for residents.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Agricultural extension services</li>
+                        <li><i class="fas fa-check"></i> Livestock and fisheries development</li>
+                        <li><i class="fas fa-check"></i> Value addition and agro-processing</li>
+                        <li><i class="fas fa-check"></i> Market linkages and access</li>
+                        <li><i class="fas fa-check"></i> Farmer training and capacity building</li>
+                        <li><i class="fas fa-check"></i> Cooperative development support</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-seedling"></i>
+                            <p>Agricultural Support</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-industry"></i>
+                            <p>Production Training</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-tractor"></i>
+                            <p>Farm Equipment</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-store"></i>
+                            <p>Market Access</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Audit Department Modal -->
+    <div id="audit-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Audit Department</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Audit Department serves as the internal watchdog of Kayunga Town Council, ensuring that all financial transactions and operations comply with established regulations and standards. We maintain transparency and accountability in the use of public resources.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Financial audits and verification</li>
+                        <li><i class="fas fa-check"></i> Compliance monitoring and assessment</li>
+                        <li><i class="fas fa-check"></i> Internal control evaluation</li>
+                        <li><i class="fas fa-check"></i> Risk assessment and management</li>
+                        <li><i class="fas fa-check"></i> Fraud detection and prevention</li>
+                        <li><i class="fas fa-check"></i> Performance auditing</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-search-dollar"></i>
+                            <p>Financial Auditing</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-clipboard-check"></i>
+                            <p>Compliance Checks</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <p>Internal Controls</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-chart-line"></i>
+                            <p>Risk Assessment</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Community Based Services Modal -->
+    <div id="community-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Community Based Services</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Community Based Services Department is dedicated to improving the quality of life for all Kayunga residents through comprehensive social services, community development initiatives, and welfare support programs that address the diverse needs of our community.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Social welfare and protection services</li>
+                        <li><i class="fas fa-check"></i> Community mobilization and development</li>
+                        <li><i class="fas fa-check"></i> Gender and youth empowerment programs</li>
+                        <li><i class="fas fa-check"></i> Disability and elderly support services</li>
+                        <li><i class="fas fa-check"></i> Child protection and family support</li>
+                        <li><i class="fas fa-check"></i> Community sensitization and awareness</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-hands-helping"></i>
+                            <p>Social Support</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-users"></i>
+                            <p>Community Programs</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-female"></i>
+                            <p>Gender Empowerment</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-wheelchair"></i>
+                            <p>Disability Services</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Commerce and Trade Modal -->
+    <div id="commerce-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Commerce & Trade Department</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The Commerce & Trade Department is the driving force behind Kayunga's economic growth and business development. We create an enabling environment for trade, support local enterprises, and regulate commercial activities to ensure fair and sustainable economic development.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Business licensing and regulation</li>
+                        <li><i class="fas fa-check"></i> Market management and supervision</li>
+                        <li><i class="fas fa-check"></i> Trade standards enforcement</li>
+                        <li><i class="fas fa-check"></i> Investment promotion and facilitation</li>
+                        <li><i class="fas fa-check"></i> Small business development support</li>
+                        <li><i class="fas fa-check"></i> Consumer protection services</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-store"></i>
+                            <p>Business Licensing</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-shopping-cart"></i>
+                            <p>Market Regulation</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-chart-line"></i>
+                            <p>Trade Development</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-handshake"></i>
+                            <p>Investment Support</p>
                         </div>
                     </div>
                 </div>
