--- a/departments.html
+++ b/departments.html
@@ -925,6 +925,26 @@
                 </div>
             </div>
         </div>
+
+        <!-- PUBLIC HEALTH -->
+      <div class="department-card">
+                    <div class="department-header">
+                        <h3 class="department-name">PUBLIC HEALTH</h3>
+                        <p class="department-head">Mr. Muonge Evans & Ms. Nakyobe Annet Rhoda</p>
+                    </div>
+                    <div class="department-image">
+                        <img src="#">
+                    </div>
+                    <div class="department-info">
+                        <p class="department-description">
+                            The Public Health Department is responsible for protecting and improving community health through disease prevention, health promotion, sanitation enforcement, and environmental health services to ensure a healthy living environment for all residents
+                        </p>
+                    
+                        <button class="read-more-btn" data-department="commerce">Read More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Department Details Modals -->
@@ -1264,6 +1284,54 @@
         </div>
     </div>
 
+     <!-- PUBLIC HEALTH Modal -->
+    <div id="commerce-modal" class="department-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Public Health</h2>
+                <button class="close-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-section">
+                    <h3>Department Overview</h3>
+                    <p>The department serves as the frontline defense against diseases and environmental health hazards, ensuring community well-being through proactive health interventions, regulatory enforcement, and health promotion activities that directly impact the quality of life and public safety within the town council.</p>
+                </div>
+                <div class="modal-section">
+                    <h3>Key Responsibilities</h3>
+                    <ul class="feature-list">
+                        <li><i class="fas fa-check"></i> Disease Prevention & Control</li>
+                        <li><i class="fas fa-check"></i> Health Facility Supervision</li>
+                        <li><i class="fas fa-check"></i> Public Health Enforcement</li>
+                        <li><i class="fas fa-check"></i> Health Education & Promotion</li>
+                        <li><i class="fas fa-check"></i> Environmental Health & Sanitation</li>
+                        <li><i class="fas fa-check"></i> Emergency Health Response</li>
+                    </ul>
+                </div>
+                <div class="modal-section">
+                    <h3>Services Offered</h3>
+                    <div class="services-grid">
+                        <div class="service-item">
+                            <i class="fas fa-utensils"></i>
+                            <p>Food safety inspections and certification</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-hand-holding-heart"></i>
+                            <p>Health education and community outreach</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-hand-sparkles"></i>
+                            <p>Environmental sanitation monitoring</p>
+                        </div>
+                        <div class="service-item">
+                            <i class="fas fa-dumpster"></i>
+                            <p>Solid waste management oversight</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
