--- a/leadership.html
+++ b/leadership.html
@@ -723,7 +723,7 @@
             <div class="mayor-section">
                 <div class="mayor-card">
                     <div class="mayor-image">
-                        <img src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Town Mayor">
+                        <img src="#">
                     </div>
                     <div class="mayor-info">
                         <h2 class="mayor-name">Hon. Kavuma David</h2>
@@ -797,7 +797,7 @@
                         <h2 class="mayor-name">Ms. Kulabako Faridah Sebunya</h2>
                         <p class="mayor-position">Town Clerk</p>
                         <p class="mayor-bio">
-                            Ms. Sarah N. Kigozi is the Town Clerk responsible for the day-to-day administration of Kayunga Town Council. With over 15 years of experience in local government administration, she oversees the implementation of council decisions, manages human resources, and ensures efficient service delivery to residents.
+                            Ms. Kulabako Faridah Sebunya is the Town Clerk responsible for the day-to-day administration of Kayunga Town Council. With over 15 years of experience in local government administration, she oversees the implementation of council decisions, manages human resources, and ensures efficient service delivery to residents.
                         </p>
                         <div class="mayor-contact">
                             <div class="contact-item">
@@ -904,7 +904,7 @@
                     <!-- Councillor 6 -->
                     <div class="councillor-card">
                         <div class="councillor-image">
-                            <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Councillor">
+                            <img src="#">
                         </div>
                         <div class="councillor-info">
                             <h3 class="councillor-name">Hon. Ssentamu Haruna Lwanyaga</h3>
@@ -920,7 +920,7 @@
                     <!-- Councillor 7 -->
                     <div class="councillor-card">
                         <div class="councillor-image">
-                            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Councillor">
+                            <img src="#">
                         </div>
                         <div class="councillor-info">
                             <h3 class="councillor-name">Hon. Samanya Nashibah</h3>
@@ -1048,7 +1048,7 @@
                     <!-- Councillor 15 -->
                     <div class="councillor-card">
                         <div class="councillor-image">
-                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Councillor">
+                            <img src="#">
                         </div>
                         <div class="councillor-info">
                             <h3 class="councillor-name">Hon. George William</h3>
@@ -1064,7 +1064,7 @@
                     <!-- Councillor 16 -->
                     <div class="councillor-card">
                         <div class="councillor-image">
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Councillor">
+                            <img src="#">
                         </div>
                         <div class="councillor-info">
                             <h3 class="councillor-name">Hon. Harriet Mirembe</h3>
